<resources>
    <string name="app_name">Tomon</string>
    <string name="action_settings">设置</string>
    <string name="voice_connecting">语音正在连接</string>
    <string name="auth_server_error">服务异常</string>
    <string name="login_title">登录Tomon</string>
    <string name="login_id_hint">手机号</string>
    <string name="login_password_hint">密码</string>
    <string name="login_button">登录</string>
    <string name="welcome">欢迎来到Tomon</string>
    <string name="slogan">類はTomonを呼ぶ</string>
    <string name="login_with_number">手机号登录/注册</string>
    <string name="login_with_code">密码登录</string>
    <string name="register_invite_code">邀请码</string>
    <string name="register_confirmation_code">验证码</string>
    <string name="register_button">注册</string>
    <string name="register_user_name">用户名（如：tomon）</string>
    <string name="register_passwd">密码（8-32位）</string>
    <string name="register_confirmation">发送验证码</string>
    <string name="register_to_login">已有账号登录</string>
    <string name="login_invalid_union_id">请输入用户名/邮箱/手机号</string>
    <string name="login_invalid_password">请输入密码</string>
    <string name="login_succeed" translatable="false">登录成功</string>
    <string name="login_failed">账号或密码错误</string>
    <string name="login_to_register">新用户注册</string>
    <string name="updateMessage">编辑信息中</string>
    <string name="cancel">取消</string>
    <string name="reply">回复:</string>
    <string name="emoji">^.^</string>
    <string name="emoji_et_hint">输入消息</string>
    <string name="emoji_guild_name">群组名称</string>
    <string name="send_fail">发送失败</string>
    <string name="send_success">发送成功</string>
    <string name="guild_deleted">该群组已被删除</string>
    <string name="app_name_capital">TOMON</string>
    <string name="ed_msg_hint_no_permisson">你没有此频道发言权限</string>
    <string name="no_voice_support">程序员小哥哥正在努力地开发语音功能!</string>
    <string name="no_pchat_support">此功能还未上线</string>
    <string name="profile_username">用户名</string>
    <string name="profile_phone">手机号</string>
    <string name="profile_email">邮箱</string>
    <string name="profile_empty">未填写</string>
    <string name="profile_logout">退出登录</string>
    <string name="report">举报</string>
    <string name="siliao">发起私聊</string>
    <string name="report_success">举报成功</string>
    <string name="report_fail">举报失败</string>
    <string name="porofile_check_logout">确定退出当前账号</string>
    <string name="profile_confirm_logout">确定</string>
    <string name="profile_cancel_logout">取消</string>
    <string name="no_more_msg">没有更多消息了</string>
    <string name="over_size">上传大小不能超过8MB</string>
    <string name="send_btn_tag">Send Button</string>
    <string name="welcome_msg">确认过眼神, %s 是我们的人</string>
    <string name="welcome_msg1">确认过眼神,&#160;</string>
    <string name="welcome_msg2">&#160;是我们的人</string>
    <string name="report_1">发布色情/欺诈/违法等不良信息</string>
    <string name="report_2">发布广告等骚扰信息</string>
    <string name="report_3">存在骚扰行为</string>
    <string name="report_4">侵犯未成年人权益</string>
    <string name="report_5">其他违规行为</string>
    <string name="report_detail">详细描述</string>
    <string name="agora_app_id">1f43061ebe7243348efad474298c2bcb</string>
    <string name="dm">私聊</string>
    <string name="status">状态</string>
    <string name="mentionMe">\@我</string>
    <string name="setting">系统设置</string>
    <string name="voice_mic_off">MIC已关闭</string>
    <string name="voice_mic_on">MIC已开启</string>
    <string name="voice_sound_on">声音已开启</string>
    <string name="voice_sound_off">声音已关闭</string>
    <string name="voice_ear_phone">非公放</string>
    <string name="voice_speaker">公放</string>
    <string name="leave_channel_btn">退出</string>
    <string name="leaving_channel_btn">退出中…</string>
    <string name="join_voice_fail">加入语音频道失败</string>
    <string name="join_permission_msg">加入语音频道失败,无麦克风权限</string>
    <string name="privacy_agreement">注册即同意《Tomon用户协议》和</string>
    <string name="privacy_agreement_pri">《Tomon隐私协议》</string>
    <string name="multi">多选</string>
    <string name="seach_bot_hint">输入Bot命令</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="guild_list_search_hint">搜索群组名称</string>
    <string name="channel_tab_text">频道</string>
    <string name="dm_tab_text">私聊</string>
    <string name="message_update_bar_text">正在编辑消息</string>
    <string name="unknown_name">未知用户</string>
    <string name="regist_successed">注册成功</string>
    <string name="user_existed_info_error">注册失败:该账户已存在或注册信息有误</string>
    <string name="regist_unknown_error">\"注册失败:未知错误 \"</string>
    <string name="select_guild_channel_hint">请先选择群组或者频道</string>
    <string name="member_info_report">举报</string>
    <string name="guild_already_joined">你已经在该群组中</string>
    <string name="guild_joined_success">加入成功</string>
    <string name="user_joined_guild">%1$s 加入了该群组</string>
    <string name="attachment_file">[文件]</string>
    <string name="attachment_image">[图片]</string>
    <string name="attachment_video">[视频]</string>
    <string name="msg_desp_stamp">[stamp]</string>
    <string name="guild_owner_changed">群主转移给了 %1$s</string>
    <string name="goto_dm">发起私聊</string>
    <string name="report_reason">举报原因</string>
    <string name="channel_info">频道详情</string>
    <string name="overflow_test_string">三十二三十二三十二三十二三十二三十二三十二三十二三十二三十二三十</string>
    <string name="channel_info_invite">邀请成员</string>
    <string name="channel_info_mute">静音</string>
    <string name="guild_member_count">%1$d位成员</string>
    <string name="guild_info_user_nickname">群组内昵称</string>
    <string name="guild_info_mute">消息免打扰</string>
    <string name="mark_as_read">标记为已读</string>
    <string name="leave_guild">离开群组</string>
    <string-array name="welcome_array">
        <item>就是现在，上吧%1$s！</item>
        <item>这里有一只%1$s，快来围观。</item>
        <item>群组送来了%1$s，要好好爱护%1$s哟！</item>
        <item>压累压累，这不是%1$s来了。</item>
        <item>来了啊%1$s，那么你的下一句话是…</item>
        <item>%1$s进群只想过平静的生活，你觉得呢？</item>
        <item>%1$s进群有一个梦想，那就是成为…</item>
        <item>%1$s，你相信群友之间是有引力的吗？</item>
        <item>哦豁，%1$s生日快乐！</item>
        <item>哟！%1$s，队伍壮大了！</item>
        <item>嘘，大家快看这是%1$s。</item>
        <item>%1$s应从召唤而来。</item>
        <item>试问，你就是%1$s吗？</item>
        <item>要上了，%1$s，表情包的储备还足够吗？</item>
        <item>不管你信不信，%1$s真的来了。</item>
        <item>欢迎你，%1$s，请来一趟沙之家。</item>
        <item>欢迎你，%1$s，愿圣光与你同在。</item>
        <item>欢迎你，%1$s，在火炉旁找个位置随便坐。</item>
        <item>%1$s快过来加个BUFF。</item>
        <item>%1$s想与心爱的你行至世界尽头。</item>
        <item>此时，一位低调的%1$s路过。</item>
        <item>这就是%1$s的入群路线哒！</item>
        <item>大家的笑容由%1$s来守护！</item>
        <item>%1$s！你为什么只在一边看着！难道你真的入群了吗！？</item>
        <item>%1$s说，可以上了。</item>
        <item>为什么入群呢？%1$s现在也在找原因呢。</item>
        <item>我%1$s就是死了，躺在棺材里了，也要用腐朽的声音喊出：我入群了。</item>
        <item>失踪人口%1$s回归。</item>
        <item>那边的人是%1$s吗？</item>
        <item>新入群的%1$s自始至终都是最佳状态。</item>
        <item>%1$s，你算计我！</item>
        <item>为什么%1$s在这里？靠自己的力量逃出来了吗？</item>
        <item>%1$s是给大家带来笑容的。</item>
        <item>这只是路过的%1$s。</item>
        <item>无敌的%1$s加入了。</item>
        <item>快看，野生的%1$s出现了！</item>
        <item>%1$s啊，你怎么现在才加入！</item>
        <item>教练，%1$s想入群。</item>
        <item>没时间解释了，%1$s，快上车！</item>
        <item>恭喜%1$s组队成功！</item>
        <item>新人%1$s也太强了，麻烦削弱一下。</item>
        <item>大家安静一下，%1$s加入我们啦！</item>
        <item>已经可以了%1$s，来到这里不需要再战斗了！</item>
        <item>注意注意，现在是%1$s时间。</item>
        <item>%1$s！那边超市薯片半价啊！快去帮我们买啊！喂！</item>
        <item>大家似乎都很忙，然而%1$s早就看穿了一切。</item>
        <item>%1$s is watching you.</item>
        <item>同志们，%1$s了解一下。</item>
        <item>%1$s可能会迟到，但绝不会缺席。</item>
        <item>入群这件事，%1$s你怎么看？</item>
        <item>自从%1$s加入了，群友数就变了。</item>
        <item>这是一个神奇的群组，实名欢迎%1$s！</item>
        <item>确认过眼神，%1$s是我们的人。</item>
        <item>%1$s小可爱，为自己代言。</item>
        <item>%1$s，快到群里来！</item>
        <item>看见群组%1$s就进来了。</item>
        <item>前天看到了小兔，昨天是小鹿，今天是%1$s。</item>
        <item>祝贺吧，新的%1$s诞生了！</item>
        <item>联邦的%1$s是怪物吗？</item>
        <item>曾经%1$s也是个冒险家，直到膝盖中了一箭。</item>
        <item>%1$s，群友中的战斗机。</item>
        <item>%1$s加入了，稳(๑ ͡° ͜◡ ͡° ๑)b</item>
        <item>%1$s加入了，群友们洋溢着笑容拍手称快。</item>
    </string-array>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="in_a_week">%1$d天前</string>
    <string name="in_a_year_detailed">%1$d月%2$d日</string>
    <string name="in_a_year_simple">%1$02d/%2$02d</string>
    <string name="out_of_a_year_detailed">%1$d年%2$d月%3$d日</string>
    <string name="out_of_a_year_simple">%1$02d/%2$02d/%3$02d</string>
    <string name="in_the_future_detailed">你穿越到了%1$d年%2$d月%3$d日</string>
    <string name="in_the_future_simple">你穿越到了%1$02d/%2$02d/%3$02d</string>
    <string name="time_stamp_detailed">%1$s %2$s:%3$s</string>
    <string name="time_stamp_show_time_simple">%1$s:%2$s</string>
    <string name="voice_channel_no_joined_desp">喂喂喂？</string>
    <string name="voice_channel_joined_one_desp">%1$s 正在输出</string>
    <string name="voice_channel_joined_two_desp">%1$s 和 %2$s 正在疯狂输出</string>
    <string name="voice_channel_alot_joined_desp">%1$s、%2$s 等%3$d人正在疯狂输出</string>
    <string name="msg_desp_mention">[有人@我]&#160;</string>
    <string name="me">我</string>
    <string name="invalid_invite">无效邀请码</string>
    <string name="leave_group">离开群组</string>
    <string name="guild_member_number">%1$d位成员</string>
    <string name="owner_dialog_is_owner_title">拥有群主身份</string>
    <string name="owner_dialog_is_owner_desp">退出群组之前请转移你所拥有的群组群主身份</string>
    <string name="ok">好的</string>
    <string name="leave_group_title">你确定退出该群组？</string>
    <string name="guild_nick_name">群组内昵称</string>
    <string name="guild_mute">消息免打扰</string>
    <string name="mark_guild_read">标记为已读</string>
    <string name="setting_failed">设置失败，请重试</string>
    <string name="mark_read_failed">标记失败，请重试</string>
    <string name="empty_channel_list">频道君消失了</string>
    <string name="empty_guild_list">你还没有群组，快去加入一个吧</string>
    <string name="join_guild">加入群组</string>
    <string name="guild_nickname_settings">群组内昵称</string>
    <string name="guild_name_settings_desp">群组昵称修改后，只会在此群组内显示。</string>
    <string name="finish">完成</string>
    <string name="set_nickname_success">设置成功</string>
    <string name="set_nickname_failed">设置昵称失败，请重试</string>
    <string name="wrong_password">密码错误</string>
    <string name="occupied_email_address">该邮箱已被注册</string>
    <string name="me_settings_failed">设置失败，请重试</string>
    <string name="copied_invite">邀请链接已复制</string>
    <string name="offline">离线</string>
    <string name="online">在线</string>
    <string name="nickname">昵称</string>
    <string name="username">用户名</string>
    <string name="bio">签名</string>
    <string name="pwd">密码</string>
    <string name="delete_account">删除账户</string>
    <string name="account_info">账户信息</string>
    <string name="pwd_placeholder">(/▽╲)</string>
    <string name="change_name">修改昵称</string>
    <string name="change_username">修改用户名</string>
    <string name="change_email">修改邮箱</string>
    <string name="change_phone">修改手机号</string>
    <string name="login_by_number">验证码登录</string>
    <string name="login_with_number_hint">未注册手机验证后自动注册。</string>
    <string name="login_verification">登录验证</string>
    <string name="sent_code_hint">验证码已发送到你的手机</string>
    <string name="login_by_pwd">密码登录</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="login_new_pwd_hint">请输入8-32位密码。</string>
    <string name="login_forget_pwd_hint">通过验证手机号找回密码。</string>
    <string name="enable_account">激活账户</string>
    <string name="enable_hint">Tomon 处于内测阶段,\n快找相关伙伴获取激活码吧！</string>
    <string name="set_info">完善信息</string>
    <string name="set_info_hint">请不要使用敏感/黄暴信息哟~</string>
    <string name="set_pwd">创建密码</string>
    <string name="set_pwd_hint">请输入8~32位密码。</string>
    <string name="apply_for_code">申请激活码</string>
    <string name="apply_email">请输入申请邮箱</string>
    <string name="query_tomon_source">你是从哪里得知 Tomon 的？（必选）</string>
    <string name="apply">提交申请</string>
</resources>