<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#313131">

    <cn.troph.tomon.ui.widgets.WelcomeView
        android:id="@+id/welcomeView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:background="#33000000"
        app:layout_constraintBottom_toTopOf="@+id/register_input_user_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="50" >


    </cn.troph.tomon.ui.widgets.WelcomeView>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="@+id/welcomeView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/welcomeView"
        app:srcCompat="@drawable/login_register_logo" />

    <EditText
        android:id="@+id/register_input_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:hint="@string/register_user_name"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/whiteAlpha70"
        android:theme="@style/AppTheme.EditText"
        app:layout_constraintBottom_toTopOf="@id/register_input_password"
        app:layout_constraintEnd_toEndOf="@+id/register_input_password"
        app:layout_constraintStart_toStartOf="@+id/register_input_password" />

    <EditText
        android:id="@+id/register_input_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:hint="@string/register_passwd"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/whiteAlpha70"
        android:theme="@style/AppTheme.EditText"
        app:layout_constraintBottom_toTopOf="@id/register_input_union_id"
        app:layout_constraintEnd_toEndOf="@+id/button_confirmation"
        app:layout_constraintStart_toStartOf="@+id/register_input_union_id" />

    <EditText
        android:id="@+id/register_input_union_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/login_id_hint"
        android:inputType="phone"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/whiteAlpha70"
        android:theme="@style/AppTheme.EditText"
        app:layout_constraintBottom_toTopOf="@id/register_confirmation_code"
        app:layout_constraintEnd_toStartOf="@id/button_confirmation"
        app:layout_constraintStart_toStartOf="@+id/register_confirmation_code" />

    <Button
        android:id="@+id/button_confirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:backgroundTint="#FF7896"
        android:text="@string/register_confirmation"
        android:textSize="14dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/register_input_union_id"
        app:layout_constraintEnd_toEndOf="@+id/register_confirmation_code"
        app:layout_constraintStart_toEndOf="@id/register_input_union_id" />

    <EditText
        android:id="@+id/register_confirmation_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/register_confirmation_code"
        android:inputType="number"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/whiteAlpha70"
        android:theme="@style/AppTheme.EditText"
        app:layout_constraintBottom_toTopOf="@+id/register_input_invite_code"
        app:layout_constraintEnd_toEndOf="@+id/register_input_invite_code"
        app:layout_constraintStart_toStartOf="@+id/register_input_invite_code" />

    <EditText
        android:id="@+id/register_input_invite_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/register_invite_code"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/whiteAlpha70"
        android:theme="@style/AppTheme.EditText"
        app:layout_constraintBottom_toTopOf="@+id/button_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="start"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="18dp"
        android:backgroundTint="#FF7896"
        android:text="@string/register_button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/private_agreement_tv2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/private_agreement_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:gravity="end"
        android:text="@string/privacy_agreement"
        android:textColor="@color/white"
        android:textColorLink="@android:color/holo_blue_light"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/private_agreement_tv2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/private_agreement_tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_agreement_pri"
        android:textColor="@color/white"
        android:textColorLink="@android:color/holo_blue_light"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/private_agreement_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/private_agreement_tv"
        app:layout_constraintTop_toTopOf="@+id/private_agreement_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>