<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#363636">

    <ImageView
        android:id="@+id/register_n_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="#202020"
        android:elevation="10dp"
        android:src="@drawable/register_n_login"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:textColor="#98ACCE"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_n_login" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/slogan"
        android:textColor="#A3A3A3"
        android:textSize="21sp"
        app:layout_constraintBottom_toTopOf="@+id/button_register_route"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <TextView
        android:id="@+id/button_register_route"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="#2D4647"
        android:gravity="center"
        android:text="@string/register_button"
        android:textColor="#2ECAD1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_login_route"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/button_login_route"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="#2A2A2A"
        android:gravity="center"
        android:text="@string/login_button"
        android:textColor="#C6A8CC"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_register_route" />

</androidx.constraintlayout.widget.ConstraintLayout>