<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="264dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="48dp"
    android:layout_marginEnd="48dp"
    android:background="@drawable/dialog_bg">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/owner_dialog_is_owner_title"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="41dp"
        android:text="@string/owner_dialog_is_owner_desp"
        android:textColor="@color/white_70"
        android:textSize="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/dialog_title"
        app:layout_constraintTop_toBottomOf="@+id/dialog_title" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="31dp"
        android:background="@drawable/bottom_sheet_ok_button"
        android:text="@string/ok"
        android:textColor="@color/pinkPrimary"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>